--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -23,11 +23,16 @@ jobs:
     runs-on: ubuntu-latest
     env:
       HUGO_VERSION: 0.123.0
+      HUGO_ENVIRONMENT: production
+      HUGO_ENV: production
     steps:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
+      - name: Install Dart Sass
+        run: sudo snap install dart-sass
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,9 +45,6 @@ jobs:
         uses: actions/configure-pages@v4
 
       - name: Build with Hugo
-        env:
-          HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
         run: |
           hugo \
             --gc \
