--- a/hugo.toml
+++ b/hugo.toml
@@ -15,6 +15,8 @@ theme = 'awesome-custom'
   showPostNavigation = true
   # Site description
   description = "to my second brain ;)"
+  # Your favicon URL (should be in static/favicon/)
+  favicon = "/favicon/favicon-32x32.png"
   # Your avatar URL
   avatar = "https://github.com/vishgm.png"
   # Main sections to include in lists
@@ -29,10 +31,6 @@ theme = 'awesome-custom'
     name = "Posts"
     url = "/posts/"
     weight = 2
-  [[menu.main]]
-    name = "Projects"
-    url = "/projects/"
-    weight = 3
   [[menu.main]]
     name = "About"
     url = "/about/"
