Add banking domain section with auto-generated TOC and date-sorted posts
- Added banking domain content structure with comprehensive retail banking overview
- Implemented automatic table of contents generation from markdown headings
- Updated section template to sort posts by date in descending order
- Added banking domain SVG assets for light/dark themes
- Updated theme SCSS variables and section layout
- Enhanced content organization and styling

--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,7 @@ baseURL = 'https://vishgm.github.io/'
 languageCode = 'en-us'
 title = 'Vishak Gopkumar'
 theme = 'awesome-custom'
+buildFuture = true  # This will allow future posts to be displayed
 
 # Enable dark/light mode
 [params]
@@ -20,7 +21,7 @@ theme = 'awesome-custom'
   # Your avatar URL
   avatar = "https://github.com/vishgm.png"
   # Main sections to include in lists
-  mainSections = ["posts", "ml", "system-design", "current-reads"]
+  mainSections = ["posts", "ml", "current-reads", "banking-domain"]
 
 [menu]
   [[menu.main]]
